Prevent users from downgrading if live restore has not completed

XMLWordPrintableJSON

    • Storage Engines, Storage Engines - Persistence, Storage Engines - Server Integration
    • Fully Compatible
    • StorEng - 2025-03-14, StorEng - 2025-03-28, RSS Sydney - 2025-04-29, Bananini - 2025-05-13
    • 5
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Live restore cannot handle a version downgrade if the restoration process has not yet completed. A complete restore can be determined from the stat live restore state when it is equal to WT_LIVE_RESTORE_COMPLETE 0x2.

      #define WT_LIVE_RESTORE_INIT 0x0
      #define WT_LIVE_RESTORE_IN_PROGRESS 0x1
      #define WT_LIVE_RESTORE_COMPLETE 0x2
      

      We should check for this when attempting a downgrade and fail the downgrade until the restoration is complete.

            Assignee:
            Nic Hollingum
            Reporter:
            Sean Watt
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: