SERVER-99018: Prevent FCV changes while live-restore is ongoing (#35079)

Co-authored-by: gregorynoma <gregory.noma@mongodb.com>
GitOrigin-RevId: 9116d3de44a9aad2b3c3d2c269d8bc70bdc6b0c8