src/mongo/db/storage/storage_engine_impl.h
@@ -281,6 +281,8 @@ public:
 
     size_t getCacheSizeMB() override;
 
+    bool hasOngoingLiveRestore() override;
+
 private:
     using CollIter = std::list<std::string>::iterator;
 
