src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.h
@@ -608,6 +608,8 @@ public:
 
     Status autoCompact(RecoveryUnit&, const AutoCompactOptions& options) override;
 
+    bool hasOngoingLiveRestore() override;
+
 private:
     StatusWith<Timestamp> _pinOldestTimestamp(WithLock,
                                               const std::string& requestingServiceName,
